<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_lifecycle_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_open_lifecycle_lab"
        app:layout_constraintBottom_toTopOf="@id/btn_open_recycler_lab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_recycler_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/main_open_recycler_lab"
        app:layout_constraintBottom_toTopOf="@id/btn_open_compose_lab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_lifecycle_lab" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_compose_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/main_open_compose_lab"
        app:layout_constraintBottom_toTopOf="@+id/btn_open_pulse_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_recycler_lab" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_pulse_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/main_open_pulse_news"
        app:layout_constraintBottom_toTopOf="@id/btn_open_coin_watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_compose_lab" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_coin_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/main_open_coin_watch"
        app:layout_constraintBottom_toTopOf="@id/btn_open_datastore_lab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_pulse_news" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_datastore_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/main_open_datastore_lab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_coin_watch" />

</androidx.constraintlayout.widget.ConstraintLayout>